simulation_brain_link, model_plugin, new vehicle_simulation_link
- moved all kitcar specific nodes from gazebo_simulation into simulation_brain_link to have a better separation
- removed the vehicle simulation plugin and instead created a more general model plugin which allows to move models around in gazebo_simulation and the vehicle_simulation_link_node in simulation_brain_link which passes the vehicles movement to the model plugin
- Explicitly added compiler flags that were previously included from kitcar-ros
- removed the model interface as it does not provide any more functionality than each model_plugin

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -104,8 +104,11 @@ test-road-generation:
 test-gazebo-simulation:
   stage: test
   script:
-    - cd models/env_db
-    - ./generate.sh -r curves
-    - cd $KITCAR_REPO_PATH/kitcar-gazebo-simulation
     - catkin_make run_tests_gazebo_simulation -j1
+    - catkin_test_results # Ensure that pipeline fails when test fails
+
+test-simulation-brain-link:
+  stage: test
+  script:
+    - catkin_make run_tests_simulation_brain_link -j1
     - catkin_test_results # Ensure that pipeline fails when test fails
