--- a/src/simulation_brain_link/package.xml
+++ b/src/simulation_brain_link/package.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>gazebo_simulation</name>
+  <name>simulation_brain_link</name>
   <version>1.0.0</version>
-  <description>The gazebo_simulation package</description>
+  <description>The simulation_brain_link package</description>
 
   <maintainer email="kitcar-organisation@lists.kit.edu">KITcar</maintainer>
   <license>TODO</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>genmsgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>rostest</build_depend>  
   <exec_depend>message_runtime</exec_depend>
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
-  <depend>gazebo_ros</depend>
-  <depend>gazebo-plugins</depend>
   <depend>roscpp</depend>
   <depend>eigen</depend>
-  <!-- The export tag contains other, unspecified, tags -->
+  <depend>opencv</depend>
+  <depend>common</depend>
+  <depend>state_estimation_msgs</depend>
 </package>
