--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -109,6 +109,12 @@ test-simulation-brain-link:
     - catkin_make run_tests_simulation_brain_link -j1
     - catkin_test_results # Ensure that pipeline fails when test fails
 
+test-simulation-groundtruth:
+  stage: test
+  script:
+    - cd simulation
+    - catkin_make run_tests_simulation_groundtruth -j1
+    - catkin_test_results # Ensure that pipeline fails when test fails
 
 ######### Documentation ########
 
