Create RefereeNode with info and reset topics
The referee (+ node) keeps track of the different state machines. It publishes observations that happened during the drive as a Referee message.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -121,6 +121,7 @@ test-simulation-evaluation:
   script:
     - python3 -m speaker.speakers.test
     - python3 -m state_machine.test
+    - python3 -m referee.test
 
     - cd simulation
     - catkin_make run_tests_simulation_evaluation -j1
