--- a/simulation/src/simulation_evaluation/CMakeLists.txt
+++ b/simulation/src/simulation_evaluation/CMakeLists.txt
@@ -53,6 +53,7 @@ add_message_files(
   Speaker.msg
   State.msg
   Broadcast.msg
+  Referee.msg
 )
 
 generate_messages(
@@ -183,4 +184,5 @@ if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
   add_rostest(launch/test/speaker_node.test)
   add_rostest(launch/test/state_machine_node.test)
+  add_rostest(launch/test/referee_node.test)
 endif()
