--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ catkin-pkg==0.4.16
 cycler==0.10.0
 docutils==0.16
 empy==3.3.4
+graphviz==0.13.2
 kiwisolver==1.1.0
 lxml==4.5.0
 matplotlib==3.2.1
@@ -33,3 +34,4 @@ pre-commit==1.21.0
 sphinx==2.4.2
 sphinx_rtd_theme
 sphinxcontrib-programoutput
+sphinx-prompt
