Refactor road files to use python scripts instead of xml files
Up to now Gazebo roads were defined using xml files. This meant that xml files had to be parsed, validated and interpreted. Adding functionality to roads always meant extending the functionality of the parser as well.
This commit introduces a major change in how roads are defined and subsequently generated. Instead of using xml to define roads and construct python classes from those xml files, roads can now be defined via a python script directly. This comes with the great benefit of autocompletion. Since the components of a road are just python classes, any IDE can support by showing available constructors and attributes to users.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -90,9 +90,7 @@ test-utils:
 test-road-generation:
   stage: test
   script: &prebuild-generation
-    - cd simulation/models/env_db
-    - ./generate.sh -r default-road
-    - ./generate.sh -r curves
+    - python3 -m generate_road default_road
 
 test-gazebo-simulation:
   stage: test
