--- a/simulation/src/simulation_groundtruth/CMakeLists.txt
+++ b/simulation/src/simulation_groundtruth/CMakeLists.txt
@@ -195,5 +195,6 @@ include_directories()
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
 if(CATKIN_ENABLE_TESTING)
-	find_package(rostest REQUIRED)
+  find_package(rostest REQUIRED)
+  add_rostest(launch/test/groundtruth_node.test)
 endif()
