Fix pulling lfs to build docs in ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -117,6 +117,7 @@ test-simulation-brain-link:
 build-documentation:
   stage: deploy
   script:
+    - git lfs pull
     - cd docs
     - make html
   artifacts: # Extract artifacts to view the documentation that has been generated
