Create SpeakerNode and EvaluationTestNode
This commit introduces the SpeakerNode, a main component of the simulation evaluation pipeline.  It can be used to understand processes happening in the simulated world (e.g. car driving on the right side of the road). The SpeakerNode creates a number of speakers which all deal with separate tasks of understanding the simulated world.
The speakers and the SpeakerNode are tested with unittest and a ROS test.

There's also the EvaluationTestNode which allows to easily test the behavior of the SpeakerNode and in the following also subsequent parts of the evaluation pipeline.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -119,6 +119,8 @@ test-simulation-groundtruth:
 test-simulation-evaluation:
   stage: test
   script:
+    - python3 -m speaker.speakers.test
+
     - cd simulation
     - catkin_make run_tests_simulation_evaluation -j1
     - catkin_test_results  # Ensure that pipeline fails when test fails
