Create KITcar Simulation Onboarding within the repository
This commit adds a new Onboarding ROS package and a new chapter to the documentation.
It is used to introduce new members to the team!

Co-authored-by:  Georg Steinebrunner <ueixz@student.kit.edu>
Co-authored-by:  Tobias Greiser <utymz@student.kit.edu>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -135,6 +135,9 @@ build-documentation:
   stage: deploy
   script:
     - git lfs pull
+    # Test if the onboarding documentation is correct
+    - python3 docs/content/onboarding/road_examples/example.py
+    # Build the documentation
     - cd docs
     - make html
   artifacts: # Extract artifacts to view the documentation that has been generated
