--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ subprocess32==3.5.4
 tqdm==4.36.1
 PyGObject==3.34.0
 pre-commit==1.21.0
-sphinx==2.4.2
+Sphinx==3.0.2
 sphinx_rtd_theme
 sphinxcontrib-programoutput
 sphinx-prompt
