Add urdf generation package
The newly added urdf generation package allows to generate xml objects that define urdf robots.
f

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,6 +72,9 @@ test-python-packages:
     - python3 -m state_machine.test
     - python3 -m referee.test
 
+    # Test the urdf package
+    - python3 simulation/utils/urdf/test/test_core.py
+
 test-ros-packages:
   stage: test
   script:
