--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ before_script:
   - bash /start_script.sh
 
   # Install packages
-  - cat packages.txt | xargs sudo apt-get install -y
+  - sudo apt-get update && cat packages.txt | xargs sudo apt-get install -y
 
   # Print out python version for debugging
   - python3 -V
