Generate dr drift model within gazebo_simulation using the urdf package
The car model can now be generated using
```
rosrun gazebo_simulation generate_dr_drift
```
Resulting files are used as parameters when launching the simulation. The vehicle is spawned on launch.

The car_model sub directory in gazebo simulation processes information about the real car's sensors and specifications to produces a model that is as close to reality as possible.

--- a/simulation/src/gazebo_simulation/CMakeLists.txt
+++ b/simulation/src/gazebo_simulation/CMakeLists.txt
@@ -215,4 +215,5 @@ if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
   add_rostest(launch/test/car_state_node.test)
   add_rostest(launch/test/model_plugin_link.test)
+  add_rostest(launch/test/car_model_generation.test)
 endif()
