--- a/simulation/src/simulation_groundtruth/param/groundtruth/default.yaml
+++ b/simulation/src/simulation_groundtruth/param/groundtruth/default.yaml
@@ -8,3 +8,9 @@ colors:
   parking_spot_occupied: [0.4, 0, 0, 0.5]
   obstacle: [0, 0, 0, 1]
   surface_marking: [1, 0.5, 0, 1]
+
+# Renderer
+tile_size: [4, 4]
+tile_resolution: [1024, 1024]
+
+default_seed: "KITCAR"
