--- a/simulation/src/gazebo_simulation/param/gazebo_rate_control/default.yaml
+++ b/simulation/src/gazebo_simulation/param/gazebo_rate_control/default.yaml
@@ -4,6 +4,8 @@
 targets:
   - topic: /camera/image_raw
     desired: 55
+  - topic: /simulation/speaker/broadcast
+    desired: 25
 
 # Restrictions on how much the gazebo update rate can be changed
 # Prevent stopping the simulation
