--- a/simulation/src/gazebo_simulation/package.xml
+++ b/simulation/src/gazebo_simulation/package.xml
@@ -4,13 +4,13 @@
   <version>1.0.0</version>
   <description>The gazebo_simulation package</description>
 
-  <maintainer email="kitcar-organisation@lists.kit.edu">KITcar</maintainer>
-  <license>TODO</license>
+  <maintainer email="kitcar-simulation@lists.kit.edu">KITcar Simulation</maintainer>
+  <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>genmsgs</build_depend>
   <build_depend>message_generation</build_depend>
-  <build_depend>rostest</build_depend>  
+  <build_depend>rostest</build_depend>
   <exec_depend>message_runtime</exec_depend>
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
