--- a/simulation/src/simulation_groundtruth/package.xml
+++ b/simulation/src/simulation_groundtruth/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The simulation_groundtruth package</description>
 
-  <maintainer email="kitcar-organisation@lists.kit.edu">KITcar</maintainer>
+  <maintainer email="kitcar-simulation@lists.kit.edu">KITcar Simulation</maintainer>
   <license>TODO</license>
 
   <buildtool_depend>catkin</buildtool_depend>
