--- a/simulation/src/simulation_onboarding/package.xml
+++ b/simulation/src/simulation_onboarding/package.xml
@@ -5,7 +5,7 @@
   <description>The simulation_onboarding package</description>
 
   <maintainer email="kitcar-simulation@lists.kit.edu">KITcar Simulation</maintainer>
-  <license>TODO</license>
+  <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>genmsgs</build_depend>
