--- a/simulation/src/simulation_brain_link/param/vehicle_simulation_link/default.yaml
+++ b/simulation/src/simulation_brain_link/param/vehicle_simulation_link/default.yaml
@@ -1,6 +1,9 @@
 frame:
-  simulation: "simulation"
+  # Root frame representing the simulation's coordinate frame
+  simulation: "sim_world"
+  # Vehicle's own coordinate frame (at the center of the rear axle, z=0)
   vehicle: "vehicle"
-  world: "world"
+  # World coordinate frame from the perspective of the vehicle
+  world: "odom"
 
 initial_pose: [0.4, -0.2]
