--- a/simulation/src/gazebo_simulation/param/gazebo_rate_control/default.yaml
+++ b/simulation/src/gazebo_simulation/param/gazebo_rate_control/default.yaml
@@ -1,9 +1,9 @@
 # Topic frequency requirements
-# (attempting to increasy the frequency up to 60Hz comes with a large computational cost)
-frequency:
-  max: 55
-  min: 45
-  desired: 50
+# If any of the topics are not publishing at all,
+# they are not considered!
+targets:
+  - topic: /camera/image_raw
+    desired: 55
 
 # Restrictions on how much the gazebo update rate can be changed
 # Prevent stopping the simulation
@@ -13,6 +13,6 @@ update_rate:
 
   # Parameters for adjusting the gazebo update rate
   control:
-    up: 0.05 # factor controlling the increase of the update rate
-    down: 0.001 # factor controlling the decrease of the update rate
-    rate: 60 # Rate with which the update_rate is changed
+    up: 0.01  # factor controlling the increase of the update rate
+    down: 0.002  # factor controlling the decrease of the update rate
+    rate: 30  # Rate with which the update_rate is changed
