--- a/simulation/docker/ci/Dockerfile
+++ b/simulation/docker/ci/Dockerfile
@@ -1,5 +1,4 @@
 FROM ros:noetic-robot-focal
-LABEL name=kitcar-gazebo-ci-image version=focal
 
 COPY init/* /
 
@@ -9,7 +8,6 @@ dbus dbus-x11 libasound2 libasound2-plugins alsa-utils \
 alsa-oss pulseaudio pulseaudio-utils \
 xvfb
 
-
 # Install packages from packages file.
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive xargs --arg-file=/packages_focal.txt apt-get install -y
 
@@ -18,3 +16,6 @@ RUN pip3 install --no-warn-script-location -r /requirements.txt
 
 # Reduce image size by removing apt cache
 RUN rm -rf /var/lib/apt/lists/*
+
+# Source ROS within the bashrc
+RUN echo "source /opt/ros/noetic/setup.bash" >> ~/.bashrc
