Add info topic to state machines that outputs states on update

--- a/simulation/src/simulation_evaluation/param/state_machine/topics.yaml
+++ b/simulation/src/simulation_evaluation/param/state_machine/topics.yaml
@@ -1,3 +1,5 @@
+info: '/simulation/state_machine/info'
+
 progress:
   get: '/simulation/state_machine/progress/get/'
   set: '/simulation/state_machine/progress/set/'
