Add complex paths & rostests to automatic drive node
Allow to set more complex paths in automatic drive node to not only drive on the right lane but at a chosen offset relative to the middle line.

--- a/simulation/src/gazebo_simulation/CMakeLists.txt
+++ b/simulation/src/gazebo_simulation/CMakeLists.txt
@@ -216,4 +216,5 @@ if(CATKIN_ENABLE_TESTING)
   add_rostest(launch/test/car_state_node.test)
   add_rostest(launch/test/model_plugin_link.test)
   add_rostest(launch/test/car_model_generation.test)
+  add_rostest(launch/test/automatic_drive.test)
 endif()
