state_machine: Extract drive states into new lane state machine
The newly added LaneStateMachine keeps track of the lane in which the car is currently in and if there are collisions or other events.
This simplifies the other state machines and allows to add more complexity to the evaluation of the driving behavior (e.g. driving onto blocked area).

--- a/simulation/src/simulation_evaluation/param/state_machine/topics.yaml
+++ b/simulation/src/simulation_evaluation/param/state_machine/topics.yaml
@@ -1,5 +1,8 @@
 info: '/simulation/state_machine/info'
 
+lane:
+  get: '/simulation/state_machine/lane/get/'
+  set: '/simulation/state_machine/lane/set/'
 progress:
   get: '/simulation/state_machine/progress/get/'
   set: '/simulation/state_machine/progress/set/'
