--- a/simulation/src/simulation_groundtruth/param/groundtruth/topics.yaml
+++ b/simulation/src/simulation_groundtruth/param/groundtruth/topics.yaml
@@ -3,6 +3,7 @@ lane: "/simulation/groundtruth/lane"
 intersection: "/simulation/groundtruth/intersection"
 parking: "/simulation/groundtruth/parking"
 obstacle: "/simulation/groundtruth/obstacle"
+surface_marking: "/simulation/groundtruth/surface_marking"
 
 spawn_model: "/simulation/gazebo/world/spawn_sdf_model"
 remove_model: "/simulation/gazebo/world/remove_model"
