cycle_gan: Add external project to repo
The cycle gan allows to transform simulated images into real looking images. It uses multiple neural networks to accomplish this. The code and ideas are based on https://junyanz.github.io/CycleGAN/.

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,9 @@ datasets
 
 # Hypothesis results
 *.hypothesis
+
+# Machine learning
+simulation/utils/machine_learning/datasets/
+simulation/utils/machine_learning/cycle_gan/checkpoints/
+simulation/utils/machine_learning/cycle_gan/results/
+*.pth
