--- a/init/requirements.txt
+++ b/init/requirements.txt
@@ -37,3 +37,7 @@ testresources
 breathe==4.16.0
 hypothesis==5.12.0
 pre-commit==1.21.0
+torch>=0.4.1
+torchvision>=0.2.1
+dominate>=2.3.1
+visdom>=0.1.8.3
