init: Separate necessary pip packages from additional ones
The init script now asks if packages only required to build the documentation or to run machine learning tasks should be installed.
These packages are large and may require a lot of time to install. Making the installation optional reduces the size of docker images and saves people some time.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,8 @@ before_script:
   - python3 -V
 
   # Install packages and requirements
-  - yes 1 | ./init/init.sh || true
+  # Leave out machine learning packages because they are not used within the CI right now.
+  - printf '1\nyn' | ./init/init.sh || true
 
   - source init/bashrc || true
 
