--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ simulation/utils/machine_learning/datasets/
 simulation/utils/machine_learning/cycle_gan/checkpoints/
 simulation/utils/machine_learning/cycle_gan/results/
 *.pth
+/data
