cycle gan: Fix typos and types
Apply suggestion to simulation/utils/machine_learning/cycle_gan/config.yml
Apply suggestion to simulation/utils/machine_learning/cycle_gan/models/cycle_gan_model.py
Apply suggestion to simulation/utils/machine_learning/cycle_gan/models/cycle_gan_model.py
Apply suggestion to simulation/utils/machine_learning/cycle_gan/models/gan_loss.py
Apply suggestion to simulation/utils/machine_learning/cycle_gan/models/gan_loss.py
Apply suggestion to simulation/utils/machine_learning/cycle_gan/models/gan_loss.py

--- a/simulation/utils/machine_learning/cycle_gan/config.yml
+++ b/simulation/utils/machine_learning/cycle_gan/config.yml
@@ -1,5 +1,5 @@
 base:
-  activation: TANH #chooses which activation to use. [TANH | HARDTANH | SELU | CELU | SOFTSHRINK |
+  activation: TANH  # Choose which activation to use. [TANH | HARDTANH | SELU | CELU | SOFTSHRINK |
   checkpoints_dir: ./checkpoints #models are saved here
   conv_layers_in_block: 2 #specify number of convolution layers per resnet block
   crop_size: 256 #then crop to this size
